Create first github package

--- a/package.json
+++ b/package.json
@@ -11,6 +11,15 @@
         "core-js": "^3.6.5",
         "vue": "^2.6.11"
     },
+    "author": "Dale Nguyen",
+    "license": "ISC",
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/rajmohan6268/typescript-package-starter.git"
+    },
+    "publishConfig": {
+        "registry": "https://npm.pkg.github.com/@drajmohan6268"
+    },
     "devDependencies": {
         "@vue/cli-plugin-babel": "~4.5.0",
         "@vue/cli-plugin-eslint": "~4.5.0",
