--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "v-breadcrumbs",
+    "name": "@rajmohan6268/v-breadcrumbs",
     "version": "0.1.0",
     "private": false,
     "scripts": {
@@ -15,10 +15,10 @@
     "license": "ISC",
     "repository": {
         "type": "git",
-        "url": "git+https://github.com/rajmohan6268/typescript-package-starter.git"
+        "url": "git://github.com/%40rajmohan6268/v-breadcrumbs.git"
     },
     "publishConfig": {
-        "registry": "https://npm.pkg.github.com/@drajmohan6268"
+        "registry": "https://github.com/@rajmohan6268"
     },
     "devDependencies": {
         "@vue/cli-plugin-babel": "~4.5.0",
@@ -59,5 +59,11 @@
         "> 1%",
         "last 2 versions",
         "not dead"
-    ]
+    ],
+    "description": "## Project setup ``` yarn install ```",
+    "bugs": {
+        "url": "https://github.com/%40rajmohan6268/v-breadcrumbs/issues"
+    },
+    "homepage": "https://github.com/%40rajmohan6268/v-breadcrumbs#readme",
+    "main": "babel.config.js"
 }
